i switched the socket.io back to from the server? you can undo if you dont want it that way

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 		}
 	},
 
-	"permissions": ["audioCapture", "videoCapture"],
+	"permissions": ["webview","audioCapture", "videoCapture"],
 
 	"sandbox": {
     		"pages": [ "index.html" ]
