--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"name": "Whiteboardr",
-	"version": "1",
+	"version": "0.0.1",
 	"manifest_version":2,
 	
-	"description": "Simple whiteboard",
+	"description": "Collaborative educational whiteboarding app.",
 
 	"app": {
 		"background": {
